Improve UI/UX with modern redesign, navigation fixes, and book switching
- Redesign color scheme from traditional cream/brown to modern teal/coral
- Switch from serif to sans-serif fonts for contemporary look
- Fix scroll position bug when navigating to chapters (added scroll-margin-top)
- Reduce reading page font size from 20px to 15px for better readability
- Increase progress page circle markers by 50% (radius 22→33, font 20px→30px)
- Redesign progress page header with compact layout and embedded progress bar
- Resize and reorganize event cards to horizontal layout (icon left, text right)
- Enable all event references as clickable links (including unread chapters)
- Add smart navigation to first unread chapter from home page book cards
- Add bookshelf modal on progress page for easy book switching
- Improve overall navigation consistency across all pages

--- a/book.html
+++ b/book.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="nav.css">
 </head>
 <body>
+    <!-- Reading Progress Bar -->
+    <div class="reading-progress" id="reading-progress">
+        <p class="reading-progress-text" id="progress-text"></p>
+    </div>
+
     <header id="book-header">
         <h1 id="book-title">Loading...</h1>
         <p class="subtitle">Berean Standard Bible</p>
