--- a/progress.html
+++ b/progress.html
@@ -12,14 +12,31 @@
 </head>
 <body>
     <header>
-        <h1 id="journey-title">Your Reading Journey</h1>
-        <p class="subtitle">Follow the path as you read</p>
+        <button id="bookshelf-button" class="bookshelf-button" aria-label="Switch book">📚</button>
+        <h1 id="journey-title">Mark</h1>
+        <p class="subtitle" id="progress-subtitle">0 of 16 chapters read</p>
+        <div class="progress-bar">
+            <div class="progress-fill" id="header-progress-fill"></div>
+        </div>
         <nav class="page-nav">
             <a href="index.html" class="nav-link">← Home</a>
             <a href="#" id="book-link" class="nav-link">Read Book</a>
             <a href="events.html" class="nav-link">Moments Discovered</a>
         </nav>
     </header>
+
+    <!-- Book Selector Modal -->
+    <div id="book-modal" class="book-modal">
+        <div class="book-modal-content">
+            <div class="book-modal-header">
+                <h2>Choose a Book</h2>
+                <button id="close-modal" class="close-modal" aria-label="Close">&times;</button>
+            </div>
+            <div id="book-list" class="book-list">
+                <!-- Books populated by JavaScript -->
+            </div>
+        </div>
+    </div>
 
     <main id="journey-container">
         <svg id="journey-map" viewBox="0 0 400 2000" xmlns="http://www.w3.org/2000/svg">
@@ -126,7 +143,7 @@
             const book = getBook(bookId);
 
             if (book) {
-                document.getElementById('journey-title').textContent = `Your Journey Through ${book.shortName}`;
+                document.getElementById('journey-title').textContent = book.shortName;
                 document.title = `Journey Through ${book.shortName} - Bible Reading`;
                 document.getElementById('book-link').href = `book.html?book=${bookId}`;
             }
